# OpenDeMail

./: .env.example  .gitignore  README.md  dev-requirements.txt  pyproject.toml  readME
OpenDeMail/: __init__.py  __main__.py  classification.py  dashboard.py
OpenDeMail/modules/: mailClient.py  mailDB.py  mailParser.py
tests/: test_OpenDeMail.py
