[project]
name = "OpenDeMail"
version = "1.0.0"
description = "An open-source email client for managing emails in a simple and secure way."
authors = [{name = "Siddhartt Kumaran", email = "siddharttkumaran@gmail.com"}]
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]